--- a/ProjetoAAED.ipynb
+++ b/ProjetoAAED.ipynb
@@ -16,41 +16,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "71 9 47 43 0 2 52 70 77 78 \n"
-     ]
-    }
-   ],
    "source": [
-    "#include <time.h>\n",
-    "#include <stdio.h>\n",
-    "#include <stdlib.h>\n",
-    "#include \"/Users/davidson/Documents/git/Ordenacao/bibaux.h\"\n",
-    "\n",
-    "int main(){\n",
-    "    int i, n=10;\n",
-    "    int v[10];\n",
-    "    \n",
-    "    vetorAleatorio(v, n);\n",
-    "    \n",
-    "    printArray(v, n);\n",
-    "    \n",
-    "    return 0;\n",
-    "}"
+    "## BubbleSort\n",
+    "O primeiro algoritmo a ser discutido é o _Bubble Sort_, que segue a ideia de 'bolhas' subindo embaixo d'água. Tal algoritmo consiste em comparar os últimos termos de uma lista com os primeiros e realizar a troca dos elementos de acordo com a ordem desejada. Por percorrer a lista duas vezes - uma para percorrer os $n$ elementos e outra para comparar os $n-1$ elementos - o algoritmo tem complexidade de ordem quadrática, O($n^2$). Segue o pseudo-código do _BubbleSort_:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Função: BubbleSort(lista):\n",
+    "    Para cada elemento i da lista:\n",
+    "        Para cada elemento j < i da lista:\n",
+    "            Se lista[j] > lista[j+1]:\n",
+    "                Troca lista[j] <-> lista[j+1]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## BubbleSort"
+    "Abaixo, a implementação do código em linguagem C:"
    ]
   },
   {
@@ -117,12 +107,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## InsertionSort"
+    "## InsertionSort\n",
+    "O algoritmo _Insertion Sort_ percorre a lista desde o início e, para cada índice $i$, ele percorre a sublista de tamanho $i-1$ comparando o seus elementos com o elemento do índice. A ordenação ocorre ao reinserir o elemento do índice $i$ na posição correta da sublista. Assim como o algoritmo _Bubble Sort_, o _Insertion Sort_ também percorre a lista e sublistas, portanto, sua complexidade é de ordem quadrática, O($n^2$). O pseudocódigo do _Insertion Sort_:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Função: InsertionSort(lista):\n",
+    "    Para cada elemento i da lista:\n",
+    "        escolhido <- lista[i]\n",
+    "        j <- i-1\n",
+    "        Enquanto j >=0 E lista[j] > escolhido:\n",
+    "            lista[j+1] <- v[j]\n",
+    "            j <- j-2\n",
+    "        lista[j+1] <- escolhido"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A implementação do algoritmo _Insertion Sort_ realizada em linguagem C pode ser vista abaixo para um vetor aleatório de tamanho 100."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -130,12 +144,12 @@
      "output_type": "stream",
      "text": [
       "Vetor Inicial de Tamanho: 100\n",
-      "88 40 29 36 78 5 22 1 3 94 80 97 60 37 9 49 56 35 50 26 44 54 71 30 95 2 76 4 72 97 29 59 19 16 70 77 94 20 20 38 70 52 79 71 51 77 69 59 21 94 55 90 68 69 37 3 12 51 50 73 84 22 94 65 10 70 46 97 38 3 19 9 56 83 9 40 70 25 41 59 30 5 90 15 65 13 91 65 91 14 26 32 25 83 45 39 59 68 69 78 \n",
+      "89 30 93 81 54 82 45 25 21 55 33 56 87 56 23 40 88 13 79 3 57 31 69 94 17 34 21 76 27 84 20 96 33 72 25 15 38 11 16 52 1 68 18 73 88 2 85 87 24 84 73 78 93 1 63 3 1 54 12 77 87 80 7 9 56 77 39 94 0 89 23 54 82 16 80 40 90 87 34 1 1 55 16 31 84 18 62 81 56 57 65 23 6 63 6 97 82 94 47 63 \n",
       "\n",
-      "0.000011 segundos.\n",
+      "0.000016 segundos.\n",
       "\n",
       "Vetor Ordenado:\n",
-      "1 2 3 3 3 4 5 5 9 9 9 10 12 13 14 15 16 19 19 20 20 21 22 22 25 25 26 26 29 29 30 30 32 35 36 37 37 38 38 39 40 40 41 44 45 46 49 50 50 51 51 52 54 55 56 56 59 59 59 59 60 65 65 65 68 68 69 69 69 70 70 70 70 71 71 72 73 76 77 77 78 78 79 80 83 83 84 88 90 90 91 91 94 94 94 94 95 97 97 97 \n"
+      "0 1 1 1 1 1 2 3 3 6 6 7 9 11 12 13 15 16 16 16 17 18 18 20 21 21 23 23 23 24 25 25 27 30 31 31 33 33 34 34 38 39 40 40 45 47 52 54 54 54 55 55 56 56 56 56 57 57 62 63 63 63 65 68 69 72 73 73 76 77 77 78 79 80 80 81 81 82 82 82 84 84 84 85 87 87 87 87 88 88 89 89 90 93 93 94 94 94 96 97 \n"
      ]
     }
    ],
@@ -155,8 +169,8 @@
     "        while((j>=0) && (v[j] > aux)){\n",
     "            v[j+1] = v[j];\n",
     "            j = j-1;\n",
-    "            v[j+1] = aux;\n",
     "        }\n",
+    "        v[j+1] = aux;\n",
     "    }\n",
     "}\n",
     "\n",
@@ -184,7 +198,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## SelectionSort"
+    "## SelectionSort\n",
+    "O algoritmo _Selection Sort_ percorre a lista de modo a selecionar o índice do menor elemento - ou o maior, se for decrescente - da sublista de elementos restante e trocar com o índice atual. Sua complexidade é quadrática, O($n^2$), por percorrer duas vezes os elementos da lista. Segue o pseudocódigo do _Selection Sort_."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Função: SelectionSort(lista):\n",
+    "    Para cada elemento i da lista:\n",
+    "        menor = i\n",
+    "        Para cada elemento j>=i+1 da lista:\n",
+    "            Se (lista[j]< lista[menor])\n",
+    "                menor = j\n",
+    "        Se i != menor:\n",
+    "            Troca lista[i] <-> lista[menor]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A implementação abaixo mostra o comportamento do algoritmo _Selection Sort_ para um vetor aleatorio de tamanho 100."
    ]
   },
   {
@@ -256,7 +294,49 @@
    "metadata": {},
    "source": [
     "## MergeSort\n",
-    "https://www.geeksforgeeks.org/merge-sort/"
+    "O algoritmo _Merge Sort_ se baseia na Divisão e Conquista e consiste em ordenar a lista a partir de duas oturas listas ordenadas. Para tal, o algoritmo divide a lista original até que suas sublistas se tornem pares. Então, esses pares são ordenados e combinados com outros pares, formando novas sublistas até que toda a lista seja ordenada. De forma sucinta, o algoritmo utiliza de três passos:\n",
+    "\n",
+    "    1. Dividir: Dividir os dados em subsequências pequenas;\n",
+    "    2. Conquistar: A ordenação dos elementos é realizada através de comparação;\n",
+    "    3. Combinar: Intercala as sublistas ordenadas.\n",
+    "\n",
+    "A seguir, o pseudocódigo do _Merge Sort_ recursivo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Função: MergeSort(lista, esquerda, direita):\n",
+    "    Se direita > esquerda:\n",
+    "        meio <- (esquerda+direita)/2\n",
+    "        MergeSort(lista, esquerda, meio)\n",
+    "        MergeSort(lista, meio+1, direita)\n",
+    "        Intercala(lista, esquerda, meio, direita)\n",
+    "\n",
+    "Função Intercala(lista, esquerda, meio, direita):\n",
+    "    tamEsq <- meio - esquerda + 1\n",
+    "    tamDir <- direita - meio\n",
+    "    L <- lista[1...tamEsq + 1]\n",
+    "    R <- lista[1...TamDir + 1]\n",
+    "    i <- 1\n",
+    "    j <- 1\n",
+    "    Para k de esquerda até direita:\n",
+    "        Se L[i] <= R[j]:\n",
+    "            lista[k] <- L[i]\n",
+    "            i < i + 1\n",
+    "        Senão:\n",
+    "            lista[k] <- R[j]\n",
+    "            j <- j + 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A implementação do _Merge Sort_ em linguagem C é realizada abaixo para um vetor aleatório de tamanho 100."
    ]
   },
   {
